--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ include(AsiofiInit)
 
 set_asiofi_cmake_policies()
 
-get_git_version(OUTVAR_PREFIX ASIOFI DEFAULT_VERSION 1.0.0 DEFAULT_DATE "Mon Mar 19 15:00:00 2018 +0200")
+get_git_version(OUTVAR_PREFIX ASIOFI)
 
 project(asiofi VERSION ${ASIOFI_VERSION} LANGUAGES C CXX)
 message("${BWhite}${PROJECT_NAME}${CR} ${PROJECT_VERSION} (${ASIOFI_GIT_VERSION}) from ${ASIOFI_DATE}")
