--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,3 +85,17 @@ install(DIRECTORY
 
 install_asiofi_cmake_package()
 ################################################################################
+
+
+# Summary ######################################################################
+message("  ")
+message("  COMPONENT  BUILT?  INFO")
+message("  ${BWhite}bindings${CR}    ${BGreen}YES${CR}    (default, always built)")
+if(BUILD_FABTESTS)
+  set(fabtests_summary "${BGreen}YES${CR}    (disable with ${BMagenta}-DBUILD_FABTESTS=OFF${CR})")
+else()
+  set(fabtests_summary "${BRed} NO${CR}    (default, enable with ${BMagenta}-DBUILD_FABTESTS=ON${CR})")
+endif()
+message("  ${BWhite}fabtests${CR}    ${fabtests_summary}")
+message("  ")
+################################################################################
