BINDIR is not always installed

--- a/cmake/asiofiConfig.cmake.in
+++ b/cmake/asiofiConfig.cmake.in
@@ -15,10 +15,10 @@ set(ASIOFI_VERSION @PROJECT_VERSION@)
 set(ASIOFI_GIT_VERSION @ASIOFI_GIT_VERSION@)
 
 set_and_check(asiofi_ROOT @PACKAGE_CMAKE_INSTALL_PREFIX@)
-set_and_check(asiofi_BINDIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_BINDIR@)
+set(asiofi_BINDIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_BINDIR@)
 set_and_check(asiofi_INCDIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_INCDIR@)
 # set_and_check(asiofi_LIBDIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_LIBDIR@)
-set_and_check(asiofi_DATADIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_DATADIR@)
+set(asiofi_DATADIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_DATADIR@)
 set_and_check(asiofi_CMAKEMODDIR @PACKAGE_CMAKE_INSTALL_PREFIX@/@asiofi_INSTALL_CMAKEMODDIR@)
 
 ### Import cmake modules
