--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,15 +7,15 @@
 ################################################################################
 
 add_executable(afi_msg_bw benchmarks/msg_bw.cpp)
-target_link_libraries(afi_msg_bw PUBLIC asiofi benchmark::benchmark Boost::program_options Boost::container)
+target_link_libraries(afi_msg_bw PUBLIC asiofi Boost::program_options Boost::container)
 
-add_executable(malloc_bw benchmarks/malloc_bw.cpp)
-target_link_libraries(malloc_bw PUBLIC benchmark::benchmark Boost::boost)
+# add_executable(malloc_bw benchmarks/malloc_bw.cpp)
+# target_link_libraries(malloc_bw PUBLIC benchmark::benchmark Boost::boost)
 
 install(
   TARGETS
   afi_msg_bw
-  malloc_bw
+  # malloc_bw
 
   EXPORT ${PROJECT_NAME}Targets
   DESTINATION ${asiofi_INSTALL_BINDIR}
