--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ if(BUILD_CORE)
   set(THREADS_PREFER_PTHREAD_FLAG TRUE)
   find_package(Threads REQUIRED)
 
-  find_package2(PUBLIC Boost VERSION 1.66 REQUIRED
-    COMPONENTS system program_options container)
+  find_package2(PUBLIC Boost VERSION 1.70 REQUIRED
+    COMPONENTS program_options container)
   find_package2(PUBLIC OFI VERSION 1.6.0 REQUIRED
     COMPONENTS fi_sockets)
 
@@ -150,12 +150,17 @@ if(PROJECT_PACKAGE_DEPENDENCIES)
   message(STATUS "  ")
   message(STATUS "  ${Cyan}DEPENDENCY FOUND   VERSION                      PREFIX${CR}")
   foreach(dep IN LISTS PROJECT_PACKAGE_DEPENDENCIES)
-    if(${dep}_VERSION)
-      if(${dep} STREQUAL Boost)
-        set(version_str "${BGreen}${${dep}_MAJOR_VERSION}.${${dep}_MINOR_VERSION}${CR}")
+    if(${dep} STREQUAL Boost)
+      if(DEFINED Boost_VERSION_STRING)
+        set(_version "${Boost_VERSION_STRING}")
+      elseif(DEFINED Boost_MAJOR_VERSION)
+        set(_version "${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION}")
       else()
-        set(version_str "${BGreen}${${dep}_VERSION}${CR}")
+        set(_version "${Boost_VERSION}")
       endif()
+      set(version_str "${BGreen}${_version}${CR}")
+    elseif(${dep}_VERSION)
+      set(version_str "${BGreen}${${dep}_VERSION}${CR}")
     else()
       set(version_str "${BYellow}unknown${CR}")
     endif()
@@ -170,6 +175,9 @@ if(PROJECT_PACKAGE_DEPENDENCIES)
     endif()
     if(${dep} STREQUAL OFI)
       get_filename_component(prefix ${${dep}_INCLUDE_DIRS}/.. ABSOLUTE)
+    elseif(${dep} STREQUAL Boost)
+      get_target_property(prefix Boost::boost INTERFACE_INCLUDE_DIRECTORIES)
+      get_filename_component(prefix ${prefix}/.. ABSOLUTE)
     elseif(${dep} STREQUAL benchmark)
       get_target_property(benchmark_lib benchmark::benchmark INTERFACE_LOCATION)
       get_filename_component(prefix ${benchmark_lib} DIRECTORY)
