--- a/include/asiofi/version.hpp.in
+++ b/include/asiofi/version.hpp.in
@@ -14,7 +14,7 @@
 #define ASIOFI_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
 #define ASIOFI_VERSION_MINOR @PROJECT_VERSION_MINOR@
 #define ASIOFI_VERSION_PATCH @PROJECT_VERSION_PATCH@
-#define ASIOFI_GIT_VERSION "@Asiofi_GIT_VERSION@"
-#define ASIOFI_GIT_DATE "@Asiofi_GIT_DATE@"
+#define ASIOFI_GIT_VERSION "@PROJECT_GIT_VERSION@"
+#define ASIOFI_GIT_DATE "@PROJECT_GIT_DATE@"
 
 #endif // ASIOFI_VERSION
